fix update logic - passing Product DTO_Write object to request body instead of read object
